# computer-graphics-v2

./: .gitignore  CMakeLists.txt  README.md  debug.sh
models/: cube.mtl  ship.mtl
src/: MtlLoader.cpp  MtlLoader.h  ObjLoader.cpp  ObjLoader.h  camera.cpp  camera.h  color.cpp  color.h  fragment.h  framebuffer.h  glad.cpp  glad.h  intersect.h  light.h  main.cpp  material.h  objLoader.h  object.h  print.h  shaders.h  ship.mtl  skybox.cpp  sphere.cpp  sphere.h  texture.h  triangle.h  uniforms.h
